package com.shyroka.engine;


import java.awt.event.*;

public class Input implements KeyListener, MouseListener, MouseMotionListener, MouseWheelListener
{
    private CoreGame core;

    private final int NUM_KEYS= 256;
    private boolean[] keys = new boolean[NUM_KEYS];
    private boolean[] keysLast = new boolean[NUM_KEYS];

    private final int NUM_BUTTONS = 5;
    private boolean[] buttons = new boolean[NUM_BUTTONS];
    private boolean[] buttonsLast = new boolean[NUM_BUTTONS];

    private int mouseX, mouseY;
    private int scroll;

    public Input(CoreGame core)
    {
        this.core = core;
        mouseX = 0;
        mouseY = 0;
        scroll = 0;

        core.getWindow().getCanvas().addKeyListener(this);
        core.getWindow().getCanvas().addMouseMotionListener(this);
        core.getWindow().getCanvas().addMouseListener(this);
        core.getWindow().getCanvas().addKeyListener(this);

    }

    public void Update()
    {
        for(int i = 0; i< NUM_KEYS; i++)
        {
            keysLast[i] = keys[i];

        }

        for(int i = 0; i< NUM_BUTTONS;i++)
        {
            buttonsLast[i] = buttons[i];
        }

    }

    //Key Methods

    public boolean isKey(int KeyCode)
    {
        return keys[KeyCode];
    }

    public boolean isKeyUp(int KeyCode)
    {
        return !keys[KeyCode] && keysLast[KeyCode];
    }

    public boolean isKeyDown(int KeyCode)
    {
        return keys[KeyCode] && !keysLast[KeyCode];
    }

    //Button Methods

    public boolean isButton(int KeyCode)
    {
        return buttons[KeyCode];
    }

    public boolean isButtonUp(int KeyCode)
    {
        return !buttons[KeyCode] && buttonsLast[KeyCode];
    }

    public boolean isButtonDown(int KeyCode)
    {
        return buttons[KeyCode] && !buttonsLast[KeyCode];
    }

    public int getMouseX() {
        return mouseX;
    }

    public int getMouseY() {
        return mouseY;
    }

    public int getScroll() {
        return scroll;
    }

    @Override
    public void keyTyped(KeyEvent e) {

    }

    @Override
    public void keyPressed(KeyEvent e) {

        keys[e.getKeyCode()] = true;

    }

    @Override
    public void keyReleased(KeyEvent e) {
        keys[e.getKeyCode()] = false;
    }

    @Override
    public void mouseClicked(MouseEvent e) {

    }

    @Override
    public void mousePressed(MouseEvent e) {
        buttons[e.getButton()] = true;
    }

    @Override
    public void mouseReleased(MouseEvent e) {
        buttons[e.getButton()] = false;
    }

    @Override
    public void mouseEntered(MouseEvent e) {

    }

    @Override
    public void mouseExited(MouseEvent e) {

    }

    @Override
    public void mouseDragged(MouseEvent e) {
        mouseX = (int)(e.getX() / core.getScale());
        mouseY = (int)(e.getY() / core.getScale());
    }

    @Override
    public void mouseMoved(MouseEvent e) {
        mouseX = (int)(e.getX() / core.getScale());
        mouseY = (int)(e.getY() / core.getScale());
    }

    @Override
    public void mouseWheelMoved(MouseWheelEvent e) {
        scroll = e.getWheelRotation();
    }
}
