@startuml

title __ENGINE's Class Diagram__\n

  namespace com.shyroka.engine {
    abstract class com.shyroka.engine.AbstractCore {
        {abstract} + render()
        {abstract} + update()
    }
  }
  

  namespace com.shyroka.engine {
    class com.shyroka.engine.Audio {
        ~ clip : Clip
        + Audio()
        + close()
        + play()
        + stop()
    }
  }
  

  namespace com.shyroka.engine {
    class com.shyroka.engine.CoreGame {
        ~ fps : int
        - Update_limit : double
        - height : int
        - running : boolean
        - scale : float
        - thread : Thread
        - title : String
        - width : int
        + CoreGame()
        + dispose()
        + getFps()
        + getHeight()
        + getInput()
        + getRenderer()
        + getScale()
        + getTitle()
        + getWidth()
        + getWindow()
        + run()
        + setHeight()
        + setRenderer()
        + setScale()
        + setTitle()
        + setWidth()
        + setWindow()
        + start()
        + stop()
    }
  }
  

  namespace com.shyroka.engine {
    class com.shyroka.engine.Image {
        - height : int
        - p : int[]
        - width : int
        + Image()
        + getHeight()
        + getP()
        + getWidth()
        + setHeight()
        + setP()
        + setWidth()
    }
  }
  

  namespace com.shyroka.engine {
    class com.shyroka.engine.ImageParse {
        ~ sourceH : int
        ~ sourceW : int
        + ImageParse()
        + getSourceH()
        + getSourceW()
        + setSourceH()
        + setSourceW()
    }
  }
  

  namespace com.shyroka.engine {
    class com.shyroka.engine.Input {
        - NUM_BUTTONS : int
        - NUM_KEYS : int
        - buttons : boolean[]
        - buttonsLast : boolean[]
        - keys : boolean[]
        - keysLast : boolean[]
        - mouseX : int
        - mouseY : int
        - scroll : int
        + Input()
        + Update()
        + getMouseX()
        + getMouseY()
        + getScroll()
        + isButton()
        + isButtonDown()
        + isButtonUp()
        + isKey()
        + isKeyDown()
        + isKeyUp()
        + keyPressed()
        + keyReleased()
        + keyTyped()
        + mouseClicked()
        + mouseDragged()
        + mouseEntered()
        + mouseExited()
        + mouseMoved()
        + mousePressed()
        + mouseReleased()
        + mouseWheelMoved()
    }
  }
  

  namespace com.shyroka.engine {
    class com.shyroka.engine.Renderer {
        - camX : int
        - camY : int
        - p : int[]
        - pH : int
        - pW : int
        + Renderer()
        + clear()
        + displayImageParse()
        + drawRectangleBorder()
        + drawRectangleShape()
        + drawSimpleImage()
        + drawText()
        + getCamX()
        + getCamY()
        + setCamX()
        + setCamY()
        + setPixel()
    }
  }
  

  namespace com.shyroka.engine {
    class com.shyroka.engine.Text {
        {static} + STANDARD : Text
        - offset : int[]
        - widths : int[]
        + Text()
        + getOffset()
        + getTextImage()
        + getWidths()
        + setOffset()
        + setTextImage()
        + setWidths()
    }
  }
  

  namespace com.shyroka.engine {
    class com.shyroka.engine.Window {
        - bs : BufferStrategy
        - canvas : Canvas
        - frame : JFrame
        - g : Graphics
        - image : BufferedImage
        + Update()
        + Window()
        + getCanvas()
        + getFrame()
        + getImage()
    }
  }
  

  com.shyroka.engine.CoreGame .up.|> java.lang.Runnable
  com.shyroka.engine.CoreGame o-- com.shyroka.engine.AbstractCore : a_core
  com.shyroka.engine.CoreGame o-- com.shyroka.engine.Input : input
  com.shyroka.engine.CoreGame o-- com.shyroka.engine.Renderer : renderer
  com.shyroka.engine.CoreGame o-- com.shyroka.engine.Window : window
  com.shyroka.engine.ImageParse -up-|> com.shyroka.engine.Image
  com.shyroka.engine.Input .up.|> java.awt.event.KeyListener
  com.shyroka.engine.Input .up.|> java.awt.event.MouseListener
  com.shyroka.engine.Input .up.|> java.awt.event.MouseMotionListener
  com.shyroka.engine.Input .up.|> java.awt.event.MouseWheelListener
  com.shyroka.engine.Input o-- com.shyroka.engine.CoreGame : core
  com.shyroka.engine.Renderer o-- com.shyroka.engine.Text : font
  com.shyroka.engine.Text o-- com.shyroka.engine.Image : textImage


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
